[gd_scene load_steps=2 format=3 uid="uid://dni6a81cgtkg2"]

[ext_resource type="Script" uid="uid://ce2qet23ckgri" path="res://addons/anim_sheet/sprite_sheet_animator.gd" id="1_mseq5"]

[node name="SpriteSheetAnimatorPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mseq5")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sprite Sheet:"

[node name="LoadTextureButton" type="Button" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load Image..."

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sprite Size:"

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "W:"

[node name="SpriteWidthSpinBox" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 8192.0
value = 32.0

[node name="Label2" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "H:"

[node name="SpriteHeightSpinBox" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 8192.0
value = 32.0

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sheet Direction:"

[node name="DirectionOptionButton" type="OptionButton" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Horizontal"
popup/item_0/id = 0
popup/item_1/text = "Vertical"
popup/item_1/id = 1

[node name="HSeparator3" type="HSeparator" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Frames per Animation:"

[node name="FramesPerAnimSpinBox" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "0 = Full Row/Column"
max_value = 1000.0

[node name="HSeparator4" type="HSeparator" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AutoDetectButton" type="Button" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Auto-Detect Animations"

[node name="ClearButton" type="Button" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Clear All Outlines"

[node name="HSeparator5" type="HSeparator" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Animation FPS:"

[node name="FpsSpinBox" type="SpinBox" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 60.0
value = 10.0

[node name="GenerateButton" type="Button" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Load a sprite sheet first."
disabled = true
text = "Generate AnimationPlayer"

[node name="StatusLabel" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Status: Ready. Load a sprite sheet."

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureDisplay" type="TextureRect" parent="HSplitContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 2
